Fix a shutdown crash with gtk2 by not attempting to unload libgconf after we've called gconf_client_get_default().  gconf initializes ORBit which in turn registers atexit() handlers, so unloading the library would cause those function pointers to become invalid.  Also, release our reference to the GConfClient in the GConfProxy dtor, and remove some unneeded code from the dtor.  Bug 210471, r=bolian.yin@sun.com, sr=alecf.